        - Add test workaround for ( largely irrelevant ) RT#120129
        - Add temporary test-workaround for a devrel of DBD::SQLite
          RT#124227 / https://twitter.com/dbix_class/status/957271153751527424
        - Add workaround for one of the most damaging "improvements" made
          during the modern-perl-era (RT#120827)

0.082840 2016-06-20 07:02 (UTC)
    * New Features
        - When using non-scalars (e.g. arrays) as literal bind values it is no
          longer necessary to explicitly specify a bindtype (this turned out
          to be a mostly useless overprotection)

    * Fixes
        - Ensure leaving an exception stack via Return::MultiLevel or something
          similar produces a large warning
        - Another relatively invasive set of ::FilterColumn changes, covering
          potential data loss (RT#111567). Please run your regression tests!
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Fix use of ::Schema::Versioned combined with a user-supplied
          $dbh->{HandleError} (GH#101)
        - Fix parsing of DSNs containing driver arguments (GH#99)
        - Fix silencing of exceptions thrown by custom inflate_result() methods
        - Fix complex prefetch when ordering over foreign boolean columns
          ( Pg can't MAX(boolcol) despite being able to ORDER BY boolcol )
        - Fix infinite loop on ->svp_release("nonexistent_savepoint") (GH#97)
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)